fix: Small UI Issues
- File names in file manager was overlapping when the file name is big.
- If the page title icon is smaller/bigger than other pages, there is a small jump between page navigation.
- Made SidePanel component more modular
- SMTP settings field on PRO was not rendering the styles.
- Source Path Picker File Manager modal's button now displays Add/Update text based on context.

--- a/frontend/src/components/common/FileManager/FileManager.module.scss
+++ b/frontend/src/components/common/FileManager/FileManager.module.scss
@@ -145,11 +145,22 @@
    text-align: left;
    word-break: break-all;
    gap: 6px;
+   max-width: 300px;
    color: var(--content-text-color);
    button {
       opacity: 0.3;
       color: var(--icon-color);
    }
+   .fileNameText {
+      display: inline-block;
+      white-space: nowrap;
+      overflow: hidden;
+      text-overflow: ellipsis;
+   }
+}
+
+.fileSize {
+   max-width: 70px;
 }
 
 .selected {
