--- a/frontend/src/components/common/PageHeader/PageHeader.module.scss
+++ b/frontend/src/components/common/PageHeader/PageHeader.module.scss
@@ -1,5 +1,6 @@
 .header {
    width: 100%;
+   max-height: 60px;
    display: flex;
    justify-content: space-between;
    align-items: center;
